--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -33,12 +33,10 @@ nav {
     font-size: xx-large;
     font-feature-settings: unset;
 }
-
 * h1 {
     color: white;
     page-break-before: always;
 }
-
 * p {
     page-break-inside: avoid;
     border-bottom: 2px double;
@@ -108,27 +106,23 @@ a:visited {
     image-rendering: -webkit-optimize-contrast;
     object-fit: fill;
 }
+
 .article {
     float: right;
     border: 2px solid;
     border-color: black;
-    padding: 10px;
+    padding: 10px 3px 5px 3px;
     position: relative;
-    height: 250px;
-    width: 160px;
+    height: px;
+    width: 200px;
     margin: 50px;
     -webkit-transform: rotateY(180deg); /* Chrome, Safari, Opera */
-    transform: rotateY(180deg);
     color: #ff6206;
     backface-visibility: visible;
     -webkit-perspective: 150px; /* Chrome, Safari, Opera */
     -webkit-perspective-origin: 10% 10%; /* Chrome, Safari, Opera */
-    perspective: 150px;
-    perspective-origin: 10% 10%;
     -webkit-transform-origin: 50% 40%; /* Chrome, Safari, Opera */
-    transform-origin: 50% 40%;
     -webkit-transform-style: preserve-3d; /* Chrome, Safari, Opera */
-    transform-style: flat;
     box-sizing: border-box;
 }
 .article p {
@@ -136,10 +130,12 @@ a:visited {
     font-size: large;
     color: white;
 }
+
 .map {
     float: left;
     padding-left: 5%;
 }
+
 .h2 {
     color: black;
     height: 120px;
@@ -151,22 +147,14 @@ a:visited {
     animation: infinite;
     -webkit-animation-name: mymove;
     animation-name: mymove;
-    position: relative;
-    margin-left: 200px;
-    webkit-animation-delay: 1s;
-    animation-delay: 1s;
+    position: absolute;
+    margin-left: 100px;
+    webkit-animation-delay: 5s;
     -webkit-animation-direction: reverse;
-    animation-direction: reverse;
     -webkit-animation-duration: 5s;
-    animation-duration: 5s;
     -webkit-animation-fill-mode: backwards; /* Chrome, Safari, Opera */
-    animation-fill-mode: backwards;
     -webkit-animation-iteration-count: 3;
-    animation-iteration-count: 3;
-    -webkit-animation-play-state: running; /* Chrome, Safari, Opera */
-    animation-play-state: running;
     -webkit-animation-timing-function: ease; /* Chrome, Safari, Opera */
-    animation-timing-function: ease;
 }
 .map img {
     float: right;
@@ -226,7 +214,7 @@ a:visited {
     border-right-style: dotted;
     border-top-left-radius: 3px;
     border-top-right-radius: 6px;
-    margin-top: auto;
+    margin-top: 20px;
     margin-bottom: auto;
     margin-left: 10px;
     margin-right: 700px;
@@ -234,10 +222,12 @@ a:visited {
     clear: both;
     display: inline-block;
 }
+
 #kitsud dl {
     text-overflow: clip;
     resize: horizontal;
 }
+
 #form {
     color: white;
     position: absolute;
@@ -249,12 +239,14 @@ a:visited {
     margin-top: 80px;
     clear: both;
 }
+
 #whatisCanvas {
     clear: both;
     float: right;
     margin-top: 38px;
     margin-left: 20px;
 }
+
 .olli {
     float: right;
     clear: both;
@@ -276,6 +268,7 @@ a:visited {
     counter-reset;
     /*marginid liiguvad kellaosuti suunas*/
 }
+
 .kood {
     clear: both;
     text-align: center;
@@ -295,6 +288,7 @@ a:visited {
     transition-timing-function: ease;
     transition-delay: 2s;
 }
+
 #jalutan {
     clear: both;
     z-index: -1;
@@ -303,14 +297,24 @@ a:visited {
     margin-left: 250px;
     margin-top: 20px;
 }
+
 #pet_name {
     clear: both;
     margin-left: 50px;
 }
+
 #first {
     width: 800px;
     float: left;
     margin-top: auto;
+    margin-bottom: 10px;
+}
+
+.quote1 {
+    color: white;
+    clear: both;
+    margin-left: 50px;
+    position: relative;
 }
 .quote {
     font-style: italic;
@@ -334,9 +338,11 @@ a:visited {
     outline-style: groove;
     outline-width: 3px;
     text-overflow: clip;
-    float: right;
-    margin-right: 65px;
+    margin-right: auto;
+    margin-left: auto;
+    clear: both;
 }
+
 #textarea {
     clear: both;
     border: 10px dotted black;
@@ -363,12 +369,15 @@ a:visited {
     order: inherit;
     margin-top: 20px;
 }
+
 h1:before {
     content: open-quote;
 }
+
 h1:after {
     content: close-quote;
 }
+
 @-webkit-keyframes mymove {
     from {
         right: 160px;
@@ -377,6 +386,7 @@ h1:after {
         right: 200px;
     }
 }
+
 .dog {
     position: absolute;
     -webkit-animation: mymove 3s i nfinite; /* Chrome, Safari, Opera */
@@ -391,6 +401,7 @@ h1:after {
     font-size: xx-large;
     margin-left: 50px;
 }
+
 .destroy {
     clear: both;
     color: white;
@@ -398,29 +409,35 @@ h1:after {
     margin-right: 200px;
     margin-bottom: 40px;
 }
+
 .form1 {
     clear: both;
     color: white;
     margin-left: 50px;
 }
+
 .miks {
     clear: both;
     color: white;
     margin-left: 50px;
 }
+
 #action {
     clear: both;
     color: white;
     margin-left: 500px;
 }
+
 .page {
     clear: both;
     color: white;
     margin-left: 500px;
 }
+
 figure {
     color: white;
 }
+
 figure img {
     border: 2px double black;
 }
